     logic from looking at all of its entries. Regression fixed for NUT
     v2.8.1 [#1432]
   * A change for file-change detection in `dummy-ups` driver for NUT
     v2.8.0 release misfired on some platforms. Regression fixed for NUT
     v2.8.1 [#1420]
   * Fixed building of NUT man pages when just a few drivers are selected
     by `configure` script for custom builds [#1467]

 - New `configure --enable-inplace-runtime` option should set default values
   for `--sysconfdir`, `--with-user` and `--with-group` options to match an
   existing NUT deployment -- for users who are trying if a custom build
   of recent codebase solves their practical issues. For "quick tests", a
   shortcut operation `./ci_build.sh inplace` was added [#1714]

 - We lacked log information about changes of chroot jail (uncommon) and
   of UID/GID (everywhere), which makes troubleshooting harder (e.g. lack
   of access to config files or USB device nodes). Now we have it [#1694]

 - huawei-ups2000 is now known to support more devices, noted in docs and
   for auto-detection [#1448, #1684]

 - nutdrv_qx updates:
   * the `voltronic_qs_protocol` should now accept both "V" (as before)
     and newly "H" dialects, which otherwise seem interchangeable [#1623]

 - usbhid-ups updates:
   * cps-hid subdriver now applies same report descriptor fixing logic to
     devices with ProductID 0x0601 as done earlier for 0x0501, to get the
     correct output voltage data [#1497]
   * apc-hid subdriver now also supports ProductID 0x0004 [#1429]
   * the `usbhid-ups` driver should now reconnect if `libusb` returned a
     memory allocation error [#1422] (seen as "Can't retrieve Report 0a:
     Resource temporarily unavailable"), which can cause practical problems
     in the field -- the driver otherwise interpreted the situation as
     `ups.status` being `OL OFF` and cut the power supply.
   * powercom-hid subdriver: fixed `UPS.Battery.ManufacturerDate` to map